# session-lambda

./: .gitignore  Makefile  README.md  pyproject.toml
examples/: lambda_function.py
session_lambda/: __init__.py  session.py
session_lambda/.github/workflows/: cicd.yml
session_lambda/store/: __init__.py  base.py  dynamodb_store.py  json_file_store.py  runtime_store.py
tests/: conftest.py  test_session.py  test_store.py
