[tool.poetry]
name = "session_lambda"
version = "0.3.1"
description = "A simple session manager for aws lambda function using dynamodb"
authors = ["Roy Pasternak <roy.pasternakk@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/roy-pstr/session-lambda"
packages = [{include = "session_lambda"}]
keywords = ['aws lambda', 'session', 'dynamodb']

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.26.60"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
moto = "^4.1.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
